crates/toml/tests/snapshots/invalid/inline-table/no-comma-01.stderr
TOML parse error at line 1, column 14
  |
1 | t = {x = 3 y = 4}
  |              ^
extra assignment between key-value pairs, expected `,`
